# accelerate_raw_data_reading

./: Cargo.toml  OPTIMIZATION_STRATEGY.md  Rust_run.sh
compare_original_to_version5/: Cargo.toml
compare_original_to_version5/src/: main.rs
compare_original_to_version5_filesoutput/: Cargo.toml
compare_original_to_version5_filesoutput/src/: main.rs
src/: main.rs
version1_mmap_prealloc/: Cargo.toml  Rust_run.sh
version1_mmap_prealloc/src/: main.rs
version2_lockfree_parallel/: Cargo.toml  Rust_run.sh
version2_lockfree_parallel/src/: main.rs
version3_simd_batch/: Cargo.toml  Rust_run.sh
version3_simd_batch/src/: main.rs
version4_zerocopy_allocator/: Cargo.toml  Rust_run.sh
version4_zerocopy_allocator/src/: main.rs
version5_hybrid_optimized/: Cargo.toml  Rust_run.sh
version5_hybrid_optimized/src/: main.rs
原始稳定版/: Cargo.toml
