[package]
name = "timstof-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
timsrust = "0.4"
rayon = "1.10"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Enable native CPU optimizations
[build]
rustflags = ["-C", "target-cpu=native"]