[package]
name = "compare-to-v5"
version = "0.1.0"
edition = "2021"

[dependencies]
timsrust = "0.4"
rayon = "1.7"
dashmap = "5.5"
bumpalo = "3.14"
mimalloc = { version = "0.1", default-features = false }
crossbeam-channel = "0.5"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
target-cpu = "native"

[profile.release.build-override]
opt-level = 3