[package]
name = "compare-to-v5-filesout"
version = "0.1.0"
edition = "2021"

[dependencies]
timsrust = "0.4"
rayon = "1.7"
dashmap = "5.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1