[package]
name = "timstof-loader-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
timsrust = "0.4"
rayon = "1.7"
packed_simd_2 = "0.3"
aligned = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
target-cpu = "native"

[profile.release.build-override]
opt-level = 3